--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h1>INK Block Hash Bet</h1>
     <button id="connectWallet">Connect Wallet</button>
     <p id="walletStatus"></p>
-    <p id="contractBalance">purple pool: loading...</p>
+    <p id="contractBalance">Purple pool: loading...</p>
 
     <div class="options">
         <h3>Choose Guess (0-9, a-f):</h3>
