--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             background: rgba(255,255,255,0.1);
             color: #fff;
         }
+        #guessButtons {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            max-width: 300px; /* 控制换行，约3行 (5-6-5) */
+            margin: auto;
+        }
         #guessButtons button {
             width: 40px;
             height: 40px;
