--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            max-width: 300px; /* 控制换行，约3行 (5-6-5) */
+            max-width: 180px; // 调整为约3行 (5-6-5)
             margin: auto;
         }
         #guessButtons button {
@@ -80,7 +80,7 @@
     <h1>INK Block Hash Bet</h1>
     <button id="connectWallet">Connect Wallet</button>
     <p id="walletStatus"></p>
-    <p id="contractBalance">Purple pool: loading...</p>
+    <p id="contractBalance">Purple pool: load...</p>
 
     <div class="options">
         <h3>Choose Guess (0-9, a-f):</h3>
