--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INK Block Hash Bet</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/ethers@6/dist/ethers.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7/dist/ethers.umd.min.js"></script>
     <style>
         body {
             font-family: 'Orbitron', sans-serif;
@@ -52,7 +52,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            max-width: 180px; // 调整为约3行 (5-6-5)
+            max-width: 180px; // 调整为3行
             margin: auto;
         }
         #guessButtons button {
@@ -80,7 +80,7 @@
     <h1>INK Block Hash Bet</h1>
     <button id="connectWallet">Connect Wallet</button>
     <p id="walletStatus"></p>
-    <p id="contractBalance">Purple pool: load...</p>
+    <p id="contractBalance">Purple pool: ...</p>
 
     <div class="options">
         <h3>Choose Guess (0-9, a-f):</h3>
