--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            max-width: 200px; // Adjusted for 3 rows (approx 5-6-5)
+            max-width: 200px; // 3 rows
             margin: auto;
         }
         #guessButtons button {
