--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Monad Betting Game Web App"
+      content="Purple Betting Game Web App"
     />
-    <title>Monad Betting Game</title>
+    <title>Purple Betting Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
